--- a/src/components/ItemCarousel/ItemCarousel.css
+++ b/src/components/ItemCarousel/ItemCarousel.css
@@ -1,19 +1,18 @@
-.slider__images {
-  height: 90vh;
-  background-size: cover;
-  background-image: linear-gradient(90deg, rgba(255, 86, 132, 0.4) 0%, rgba(83, 50, 201, 0.4) 68%), linear-gradient(90deg, rgba(255, 86, 132, 0.4) 0%, rgba(83, 50, 201, 0.4) 68%);
-  background-image: linear-gradient(bottom, #ff8b01 0%, #ffb547 100%), linear-gradient(bottom, #ff8b01 0%, #ffb547 100%);
-  position: relative; }
+.carousel__item--image {
+  overflow: hidden;
+  position: relative;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover, cover;
+  display: inline-block; }
 
-.max-zed {
-  z-index: 1;
-  color: white;
-  bottom: 7%;
-  left: 7%;
-  font-size: 250%;
+.carousel__item--image::before {
   position: absolute;
-  display: block; }
-
-.linear-gradient {
-  background-image: linear-gradient(90deg, rgba(255, 86, 132, 0.4) 0%, rgba(83, 50, 201, 0.4) 68%), linear-gradient(90deg, rgba(255, 86, 132, 0.4) 0%, rgba(83, 50, 201, 0.4) 68%);
-  background-size: cover; }
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: repeating-linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)) center top no-repeat;
+  pointer-events: none;
+  content: "";
+  background-size: cover, cover; }
