--- a/src/components/PopularMovies/PopularMovies.css
+++ b/src/components/PopularMovies/PopularMovies.css
@@ -1,11 +1,6 @@
 .popular__movies-list--container {
   padding: 25px; }
 
-.popular__movies-list--container:last-child {
-  border: none;
-  background-image: none;
-  height: 0px; }
-
 .popular__movies-list--separator {
   background-image: radial-gradient(circle, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.075) 90%);
   border: none;
@@ -17,4 +12,7 @@
   justify-content: center; }
 
 .media {
-  align-items: center !important; }
+  align-items: center !important;
+  padding: 20px;
+  margin: 20px;
+  border-bottom: 2px solid black; }
