--- a/src/components/PopularMovies/PopularMovies.scss
+++ b/src/components/PopularMovies/PopularMovies.scss
@@ -2,12 +2,6 @@
     padding: 25px;
 }
 
-.popular__movies-list--container:last-child {
-    border: none;
-    background-image: none;
-    height: 0px;
-}
-
 .popular__movies-list--separator {
     background-image: radial-gradient(circle, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.075) 90%);
     border: none;
@@ -22,4 +16,7 @@
 
 .media {
     align-items: center !important;
+    padding: 20px;
+    margin: 20px;
+    border-bottom: 2px solid black;
 }
