--- a/src/components/PopularMovies/PopularMovies.scss
+++ b/src/components/PopularMovies/PopularMovies.scss
@@ -1,22 +1,25 @@
-.popular__movies-list--container {
-    padding: 25px;
-}
 
-.popular__movies-list--separator {
-    background-image: radial-gradient(circle, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.075) 90%);
-    border: none;
-    height: 2px;
-}
 
-.media-body {
-    padding: 25px;
-    align-items: center !important;
+.swiper-container {
+    width: 100%;
+    height: 100%;
+  }
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
     justify-content: center;
-}
-
-.media {
-    align-items: center !important;
-    padding: 20px;
-    margin: 20px;
-    border-bottom: 2px solid black;
-}
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
