--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,3 +1,12 @@
 .btn--animated {
     animation: fadeIn .8s;
 }
+
+.home-container {
+    background: black;
+}
+
+.home-container-main {
+    max-width: 80%;
+    margin: 0 auto;
+}
