--- a/src/components/PopularMovies/PopularMovies.css
+++ b/src/components/PopularMovies/PopularMovies.css
@@ -624,7 +624,7 @@ body {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
+  opacity: .6;
   height: 100%;
   /* Center slide text vertically */
   display: -webkit-box;
@@ -638,4 +638,13 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   -webkit-align-items: center;
-  align-items: center; }
+  align-items: center;
+  transition: transform .5s; }
+
+.swiper-slide:hover {
+  opacity: 1.2;
+  transform: scale(1.05);
+  transition: transform .5s; }
+
+#link:hover {
+  color: white; }
