--- a/src/components/PopularMovies/PopularMovies.scss
+++ b/src/components/PopularMovies/PopularMovies.scss
@@ -21,7 +21,7 @@ body {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
+  opacity: .6;
   height: 100%;
   /* Center slide text vertically */
   display: -webkit-box;
@@ -36,4 +36,26 @@ body {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
+  transition: transform .5s;
+}
+
+// .item:after {
+//     content:"";
+//     display:block;
+//     position:absolute;
+//     top:0;
+//     bottom:0;
+//     left:0;
+//     right:0;
+//     background:rgba(0,0,0,0.6);
+//   }
+
+.swiper-slide:hover {
+    opacity: 1.2;
+    transform: scale(1.05);
+    transition: transform .5s;
+}
+
+#link:hover {
+    color: white;
 }
