--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
-// @import "./styles/variables";
+//@import "./styles/variables";
 @import "./styles/animations";
+@import "./styles/carousel";
 @charset "UTF-8";
 
 /* Reset */
