--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,15 +1,17 @@
 .main-footer {
-  background: #131517;
+  background: linear-gradient(45deg, #131517, #131517), url("https://upload.wikimedia.org/wikipedia/commons/d/d6/Hamlin_theatre.jpg");
   color: #fff;
   font-family: "Roboto", sans-serif;
-  font-size: .9rem;
-  padding: 2rem; }
+  font-size: 0.9rem;
+  padding: 2rem;
+  height: 100%;
+  width: 100%; }
   .main-footer-top-header {
     font-size: 1rem;
     margin-bottom: 2rem; }
     .main-footer-top-header__title {
       font-family: "Alegreya Sans", sans-serif;
-      letter-spacing: .4rem;
+      letter-spacing: 0.4rem;
       text-transform: uppercase; }
     .main-footer-top-header-nav {
       align-items: center;
@@ -20,7 +22,7 @@
     grid-template-columns: 1fr 1fr; }
     .main-footer-top-item__title {
       color: rgba(255, 255, 255, 0.7);
-      font-size: .9rem;
+      font-size: 0.9rem;
       font-weight: normal; }
   .main-footer-top-copyright {
     color: rgba(255, 255, 255, 0.7);
@@ -44,11 +46,11 @@
         height: auto;
         margin: 0 10px;
         padding: 5px;
-        transition: background-color .4s;
+        transition: background-color 0.4s;
         width: 20px; }
         .main-footer-bottom-section-2__icon:hover {
           background-color: white;
-          transition: background-color .4s; }
+          transition: background-color 0.4s; }
   .main-footer a,
   .main-footer a:active,
   .main-footer a:hover,
